--- a/assignment 3/bootstrap/style.css
+++ b/assignment 3/bootstrap/style.css
@@ -115,7 +115,7 @@ body {
     padding: 3% 2%;
   }
   
-  #cta {
+  #contact {
     background-color: #ff4c68;
     text-align: center;
     padding: 100px 15% 40px;
